// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders at each size 1`] = `
<h2
  class="text-sm font-bold mb-2"
>
  Teysa
</h2>
`;

exports[`renders at each size 2`] = `
<h2
  class="text-xl md:text-2xl font-bold mb-4"
>
  Teysa
</h2>
`;

exports[`renders at each size 3`] = `
<h2
  class="text-2xl md:text-4xl font-bold mb-4"
>
  Teysa
</h2>
`;

exports[`renders at each size 4`] = `
<h2
  class="text-4xl md:text-5xl font-bold leading-snug md:leading-snug mb-8"
>
  Teysa
</h2>
`;

exports[`renders at each size 5`] = `
<h2
  class="text-6xl md:text-7xl font-bold leading-snug md:leading-snug mb-16"
>
  Teysa
</h2>
`;
